# rss_bot

./: .dockerignore  .env.tmpl  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py
app/tg_bot/: __init__.py  handlers.py  handlers_repository.py
app/tg_bot/handlers/: __init__.py  add.py  cancel.py  start.py
bot/: config.py
bot/tg_bot/: handlers_repository.py
bot/tg_bot/handlers/: _states.py  del_feeds.py  list_feeds.py
