[tool.poetry]
name = "rss_bot"
version = "0.1.0"
description = "RSS feeds aggregator bot for telegram"
authors = ["@antoncarrot"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
uvloop = "^0.19.0"
httpx = "^0.25.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
